Agregadas correciones de GM

--- a/justificacion.tex
+++ b/justificacion.tex
@@ -2,21 +2,22 @@
 La cantidad de servicios que organismos públicos y privados ofrecen a través de Internet aumenta constantemente, y en consecuencia también lo hace la complejidad de la infraestructura y los sistemas necesarios para proveerlos. \par
 La integridad de estos sistemas puede verse comprometida principalmente por dos factores: las fallas de los componentes de la infraestructura de red\cite{Gill:2011:UNF:2043164.2018477}, que afectan a una parte o a la totalidad de las funcionalidades del sistema, y los numerosos tipos de ataques\cite{Karumanchi:2014:WLS:2554850.2555010}\cite{mutchler15:mobilewebapps} a los servicios ofrecidos al público. Hacer frente a estos ataques es de extrema importancia dado que su fin puede ser no solo afectar la calidad de los servicios ofrecidos, sino que su objetivo puede ser expropiar información sensible o crítica para desarrollo de las actividades de la organización. Además de ataques externos, los sistemas pueden ser vulnerados por usuarios malintensionados con acceso físico a la red interna de la organización, o por actores inadvertidos\cite{Kraemer2007143}\cite{Kraemer2009509}\cite{Liginlal2009215}\cite{Ahmed12humanerrors}. \par
 La utilización de herramientas clásicas para implementar políticas de seguridad como firewall, lista de control de acceso, credenciales de usuario, proxy de red entre otros, resultaba adecuado 10 años atrás, pero en la actualidad estas herramientas están siendo cada vez menos efectivas en la tarea de bloquear ataques dirigidos y malware avanzados. Esto hace que cada vez sea más común la utilización de otros métodos que monitorean continuamente eventos en busca de patrones que puedan indicar comportamientos anómalos en el tráfico de red, provocados tanto por ataques como por fallas en los dispositivos de red. Los sistemas de detección/prevención de intrusiones (IDS o IPS por las siglas en inglés \textit{Intrusion Detection/Prevention System}) pueden realizar esta tarea utilizando dos enfoques: detección de uso indebido o \textit{signature-based detection} y detección de anomalías o \textit{anomaly-based detection}\cite{Milenkoski:2015:ECI:2808687.2808691}. En el primer caso, el sistema determina la ocurrencia de ataques comparando la actividad de la red y de los subsistemas que la componen, contra un conjunto de patrones de ataques conocidos. Si los patrones coinciden, el ataque es informado y pueden tomarse medidas al respecto. En el segundo caso, se modela el comportamiento normal de la red y se usa como base para buscar comportamientos anómalos, los cuales pueden ser provocados por fallas o indicadores de potenciales ataques. \par
-Como alternativa a las soluciones de hardware dedicado o sistemas privativos que ofrecen algunas empresas, la comunidad de software libre desarrolla y mantiene la aplicación Snort\footnote{https://www.snort.org/}, un IDS basado en detección de uso indebido. Si bien esta herramienta es efectiva detectando ataques conocidos, es dependiente de la definición de un conjunto efectivo de reglas por parte del administrador (las cuales son difíciles de mantener) y de una base de datos actualizada con los patrones de ataques o \textit{malware}. Otra desventaja de esta técnica de detección es la imposibilidad de detectar ataques \textit{zero-day\footnote{ataques que explotan vulnerabilidades que aún no han sido conocidas o que no están contempladas en al conjunto definido de reglas}}\cite{Milenkoski:2015:ECI:2808687.2808691}. Otra herramienta que suele utilizarse en conjunto con Snort es Bro\footnote{https://www.bro.org/}, una plataforma para análisis de tráfico de red. Sin embargo, Bro también se basa en la definición de reglas de monitoreo y utiliza detección de uso indebido. \par
+Como alternativa a las soluciones de hardware dedicado o sistemas privativos que ofrecen algunas empresas, la comunidad de software libre desarrolla y mantiene la aplicación Snort\footnote{https://www.snort.org/}, un IDS basado en detección de uso indebido. Si bien esta herramienta es efectiva detectando ataques conocidos, es dependiente de la definición de un conjunto efectivo de reglas por parte del administrador (las cuales son difíciles de mantener) y de una base de datos actualizada con los patrones de ataques o \textit{malware}. Otra desventaja de esta técnica de detección es la imposibilidad de detectar ataques \textit{zero-day\footnote{ataques que explotan vulnerabilidades que aún no han sido conocidas o que no están contempladas en al conjunto definido de reglas}}\cite{Milenkoski:2015:ECI:2808687.2808691}. Otra herramienta que suele utilizarse en conjunto con Snort es Bro\footnote{https://www.bro.org/}, una plataforma para análisis de tráfico de red. Sin embargo, Bro también se basa en la definición de reglas de monitoreo y utiliza detección de uso indebido. Por otro lado, las herramientas de detección de anomalías cómo Ourmon\footnote{http://ourmon.sourceforge.net/} utilizando métodos de detección estadísticos y no están diseñados para procesar grandes volúmenes de datos. De esta forma, el desarrollo de este proyecto genera además un aporte significativo a la comunidad de software libre. \par
 
-Con el fin de disponer de otra herramienta para la identificación de comportamientos sospechosos, el objetivo de este proyecto consiste en diseñar un software que modele de forma automática el comportamiento normal de la red utilizando las técnicas del estado del arte, para identificar y alertar sobre comportamiento anómalo en una infraestructura de red de datos. Esto complementa las funcionalidades de las herramientas basadas en detección de uso indebido dado que el modelado automático de comportamiento hace que no sea necesario utilizar un conjunto de reglas definidas por administradores. El modelo de comportamiento normal del tráfico de la red será calculado por el software, brindando la posibilidad de detectar efectivamente cualquier evento poco usual en los sistemas. Para esto, se hará uso de la información generada por los dispositivos de infraestructura de red como routers y los logs de servidores y subsistemas que interactuan dentro de la red de la Secretaría de Tecnologías para la Gestión de la Provincia de Santa Fe. \par
-Este sistema, al calcular automáticamente el modelo de comportamiento, es fácil de implementar y al utilizar información de la red su implementación requiere pocas modificaciones en los sistemas que se encuentran funcionando.
+El diseño de una herramienta para la identificación de comportamientos sospechosos en redes de información, mediante el análisis del tráfico de red con métodos de \textit{streaming} para modelar de forma automática el comportamiento normal de la red utilizando técnicas de conteo, permite identificar y alertar sobre comportamiento anómalo en una infraestructura de red de datos. Esto complementa las funcionalidades de las herramientas basadas en detección de uso indebido dado que el modelado automático de comportamiento hace que no sea necesario utilizar un conjunto de reglas definidas por administradores. El modelo de comportamiento normal del tráfico de la red será calculado por el software, brindando la posibilidad de detectar efectivamente cualquier evento poco usual en los sistemas. Para esto, se hará uso de la información generada por los dispositivos de infraestructura de red como routers y los logs de servidores y subsistemas que interactuan dentro de la red. \par
+Además, al calcular automáticamente el modelo de comportamiento, es fácil de implementar y al utilizar información de la red su implementación requiere pocas modificaciones en los sistemas que se encuentran funcionando. Se utilizará programación funcional para el desarrollo de los algoritmos, lo que aporta un complemento a la formación de grado y a la comunidad académica debido a la importancia de este paradigma en la resolución de problemas de procesamiento \textit{on-line}. \par
+Las pruebas del proyecto se harán en la Secretaría de Tecnologías para la Gestión de la Provincia de Santa Fe, lo cual la convierte en potencial beneficiaria de los resultados obtenidos del desarrollo de este proyecto.  \par
 
 \section*{Objetivos}
 \subsection*{Generales}
-Diseñar un sistema de detección de anomalías en redes de datos TCP/IP utilizando técnicas de modelado automático del comportamiento del tráfico de la red.
+Diseñar y codificar un sistema de detección de anomalías en redes de datos TCP/IP utilizando técnicas de modelado automático del comportamiento del tráfico de la red.
 \subsection*{Específicos}
 \begin{itemize}
 
 \item Identificar un conjunto de tecnologías y herramientas adecuadas para el diseño del sistema.
 \item Elaborar un documento que describa la arquitectura del sistema.
 \item Determinar las técnicas de modelado de tráfico de red necesarias.
-\item Implementar un software que modele el tráfico normal de red de forma automática, utilizando técnicas no supervisadas.
+\item Desarrollar un software que modele el tráfico normal de red de forma automática, utilizando técnicas no supervisadas.
 \item Implementar un software que genere alertas ante la ocurrencia de eventos anómalos.
 \item Diseñar un sistema que minimice la clasificación de eventos como falsos negativos. Este objetivo es de particular importancia dado que un evento anómalo clasificado como falso negativo es un evento potencialmente dañino considerado como normal.
 \end{itemize}
@@ -35,6 +36,7 @@ Diseñar un sistema de detección de anomalías en redes de datos TCP/IP utiliza
 
 \subsubsection*{No Funcionales}
 \begin{itemize}
+	\item El sistema procesará flujos de datos en tiempo real.
 	\item Se proveerá un manual de instalación y configuración.
 \end{itemize}
  
@@ -42,7 +44,7 @@ Diseñar un sistema de detección de anomalías en redes de datos TCP/IP utiliza
 El proyecto no contempla la instalación del sistema en un ámbito de producción.
 
 \subsection*{Supuestos}
-Los datos necesarios para realizar pruebas pueden ser generados arbitrariamente. Además, se utilizarán datos provistos por el Centro de Cómputos de la Provincia de Santa Fe.
+Los datos necesarios para realizar pruebas pueden ser generados automáticamente. Además, se utilizarán datos provistos por el Centro de Cómputos de la Provincia de Santa Fe.
 
 \subsection*{Criterios de Aceptación}
 Se considera que el proyecto está aceptado cuando cumple en un 90\% los requisitos funcionales, con un nivel mínimo de aceptación del 75\%. Los prototipos deben tener implementadas todas las funcionalidades planificadas.
