--- a/metodologia.tex
+++ b/metodologia.tex
@@ -16,8 +16,8 @@ En esta etapa se implementarán las técnicas de modelado de comportamiento sele
 Se implementarán las funcionalidades de detección de anomalías y se agregará al software mecanismos de generación de alarmas. Además se mejorará la interfaz de usuario.
 \paragraph{Incremento 4: Modelado de comportamiento de subsistemas} \
 Con el fin de mejorar la identificación de anomalías se incorporará al modelo de comportamiento información de los diferentes subsistemas que componen la infraestructura de red.
-\paragraph{Incremento 5: Pruebas exhaustivas y documentación}
-Se completará el desarrollo del software y se redactará la documentación necesaria. Dado que la tasa de falsos negativos\footnote{La existencia de falsos negativos implica la existencia de ataques verdaderos que no son detectados por el IDS} debe ser mínima, se realizarán pruebas exhaustivas de funcionamiento. Una vez concluidas las pruebas, se elaborará un informe con los resultados obtenidos
+\paragraph{Incremento 5: Pruebas y documentación}
+Se completará el desarrollo del software y se redactará la documentación necesaria. Una vez concluidas las pruebas, se elaborará un informe con los resultados obtenidos
 
 \ \
 
@@ -80,7 +80,7 @@ La duración total del proyecto es de $466$ horas, con una dedicación de $20$ h
 		\item Pruebas de implementación. (24hs)
 		\item Implementación de funcionalidad de detección de anomalías y alarmas. (20hs)
 	\end{enumerate}
-	\item \textbf{Pruebas exhaustivas y documentación} (72hs)
+	\item \textbf{Pruebas y documentación} (72hs)
 	\begin{enumerate}
 		\item Pruebas de detección. (20hs)
 		\item Elaboración de informe de desempeño. (12hs)
@@ -113,7 +113,7 @@ Se describirán las pruebas de integración del sistema. Además tendrá informa
 			Modelado de comportamiento & 03/10/2016 & 04/11/2016 & 4 semanas \\
 			Detección de anomalías & 07/11/2016 & 16/12/2016 & 5 semanas \\
 			Modelado de comportamiento de subsistemas & 19/12/2016 & 18/02/2017 & 8 semanas \\
-			Pruebas exhaustivas y documentación & 20/02/2017 & 25/03/2017 & 5 semanas \\ \hline
+			Pruebas y documentación & 20/02/2017 & 25/03/2017 & 5 semanas \\ \hline
 		\end{tabular}
 	\end{center}
 	\caption{Fechas estimativas de inicio y fin de actividades.}
