--- a/justificacion.tex
+++ b/justificacion.tex
@@ -1,11 +1,11 @@
 \section*{Justificación}
 La cantidad de servicios que organismos públicos y privados ofrecen a través de Internet aumenta constantemente, y en consecuencia también lo hace la complejidad de la infraestructura y los sistemas necesarios para proveerlos. \par
-La integridad de estos sistemas puede verse comprometida principalmente por dos factores: las fallas de los componentes de la infraestructura de red\cite{Gill:2011:UNF:2043164.2018477}, que afectan a una parte o a la totalidad de las funcionalidades del sistema, y los numerosos tipos de ataques\cite{Karumanchi:2014:WLS:2554850.2555010}\cite{mutchler15:mobilewebapps} a los servicios ofrecidos al público. Hacer frente a estos ataques es de extrema importancia dado que su fin puede ser no solo afectar la calidad de los servicios ofrecidos, sino que su objetivo puede ser expropiar información sensible o crítica para el desarrollo de las actividades de la organización. Además de ataques externos, los sistemas pueden ser vulnerados por usuarios malintensionados con acceso físico a la red interna de la organización, o por actores inadvertidos\cite{Kraemer2007143}\cite{Kraemer2009509}\cite{Liginlal2009215}\cite{Ahmed12humanerrors}. \par
-La utilización de herramientas clásicas para implementar políticas de seguridad como firewall, lista de control de acceso, credenciales de usuario, proxy de red entre otros, resultaba adecuado 10 años atrás, pero en la actualidad estas herramientas están siendo cada vez menos efectivas en la tarea de bloquear ataques dirigidos y malware avanzados. Esto hace que cada vez sea más común la utilización de otros métodos que monitorean continuamente eventos en busca de patrones que puedan indicar comportamientos anómalos en el tráfico de red, provocados tanto por ataques como por fallas en los dispositivos de red. Los sistemas de detección/prevención de intrusiones (IDS o IPS por las siglas en inglés \textit{Intrusion Detection/Prevention System}) pueden realizar esta tarea utilizando dos enfoques: detección de uso indebido o \textit{signature-based detection} y detección de anomalías o \textit{anomaly-based detection}\cite{Milenkoski:2015:ECI:2808687.2808691}. En el primer caso, el sistema determina la ocurrencia de ataques comparando la actividad de la red y de los subsistemas que la componen, contra un conjunto de patrones de ataques conocidos. Si los patrones coinciden, el ataque es informado y pueden tomarse medidas al respecto. En el segundo caso, se modela el comportamiento normal de la red y se usa como base para identificar comportamientos anómalos, los cuales pueden ser provocados por fallas o indicadores de potenciales ataques. \par
+La integridad de estos sistemas puede verse comprometida principalmente por dos factores: las fallas de los componentes de la infraestructura de red\cite{Gill:2011:UNF:2043164.2018477}, que afectan a una parte o a la totalidad de las funcionalidades del sistema, y los numerosos tipos de ataques\cite{Karumanchi:2014:WLS:2554850.2555010}\cite{mutchler15:mobilewebapps} a los servicios ofrecidos al público. Hacer frente a estos ataques es de extrema importancia dado que su fin puede ser no solo afectar la calidad de los servicios brindados, sino que su objetivo puede ser expropiar información sensible o crítica para el desarrollo de las actividades de la organización. Además de ataques externos, los sistemas pueden ser vulnerados por usuarios malintensionados con acceso físico a la red interna de la organización, o por actores inadvertidos\cite{Kraemer2007143}\cite{Kraemer2009509}\cite{Liginlal2009215}\cite{Ahmed12humanerrors}. \par
+La utilización de herramientas clásicas para implementar políticas de seguridad como firewall, lista de control de acceso, credenciales de usuario, proxy de red entre otros, resultaba adecuado 10 años atrás, pero en la actualidad estas herramientas están siendo cada vez menos efectivas en la tarea de bloquear ataques dirigidos y malware avanzados. Esto hace que cada vez sea más común la utilización de otros métodos que monitorean continuamente eventos en busca de patrones que puedan indicar comportamientos anómalos en el tráfico de red, provocados tanto por ataques como por fallas en los dispositivos de red. Los sistemas de detección/prevención de intrusiones (IDS o IPS por las siglas en inglés \textit{Intrusion Detection/Prevention System}) pueden realizar esta tarea utilizando dos enfoques: detección de uso indebido (o \textit{signature-based detection}) y detección de anomalías (o \textit{anomaly-based detection})\cite{Milenkoski:2015:ECI:2808687.2808691}. En el primer caso, el sistema determina la ocurrencia de ataques comparando la actividad de la red y de los subsistemas que la componen, contra un conjunto de patrones de ataques conocidos. Si los patrones coinciden, el ataque es informado y pueden tomarse medidas al respecto. En el segundo caso, se modela el comportamiento normal de la red y se usa como base para identificar comportamientos anómalos, los cuales pueden ser provocados por fallas o pueden ser indicadores de potenciales ataques. \par
 Como alternativa a las soluciones de hardware dedicado o sistemas privativos que ofrecen algunas empresas, la comunidad de software libre desarrolla y mantiene la aplicación Snort\footnote{https://www.snort.org/}, un IDS basado en detección de uso indebido. Si bien esta herramienta es efectiva detectando ataques conocidos, es dependiente de la definición de un conjunto efectivo de reglas por parte del administrador (las cuales son difíciles de mantener) y de una base de datos actualizada con los patrones de ataques o \textit{malware}. Otra desventaja de esta técnica de detección es la imposibilidad de detectar ataques \textit{zero-day\footnote{ataques que explotan vulnerabilidades que aún no han sido conocidas o que no están contempladas en al conjunto definido de reglas}}\cite{Milenkoski:2015:ECI:2808687.2808691}. Otra herramienta que suele utilizarse en conjunto con Snort es Bro\footnote{https://www.bro.org/}, una plataforma para análisis de tráfico de red. Sin embargo, Bro también se basa en la definición de reglas de monitoreo y utiliza detección de uso indebido. Por otro lado, las herramientas de detección de anomalías cómo Ourmon\footnote{http://ourmon.sourceforge.net/} utilizando métodos de detección estadísticos y no están diseñados para procesar grandes volúmenes de datos. Es importante destacar que el desarrollo de este proyecto genera además un aporte a la comunidad de software libre. \par
 
-El diseño de una herramienta para la identificación de comportamientos sospechosos en redes de información, mediante el análisis del tráfico de red con métodos de \textit{streaming} para modelar de forma automática el comportamiento normal de la red utilizando técnicas de conteo, permite identificar y alertar sobre comportamiento anómalo en una infraestructura de red de datos. Esto complementa las funcionalidades de las herramientas basadas en detección de uso indebido dado que el modelado automático de comportamiento hace que no sea necesario utilizar un conjunto de reglas definidas por administradores. El modelo de comportamiento normal del tráfico de la red será calculado por el software, brindando la posibilidad de detectar efectivamente cualquier evento poco usual en los sistemas. Para esto, se hará uso de la información generada por los dispositivos de infraestructura de red como routers y los logs de servidores y subsistemas que interactuan dentro de la red. \par
-Además, al calcular automáticamente el modelo de comportamiento, es fácil de implementar y al utilizar información de la red su implementación requiere pocas modificaciones en los sistemas que se encuentran funcionando. Se utilizará programación funcional para el desarrollo de los algoritmos, lo que aporta un complemento a la formación de grado y a la comunidad académica debido a la importancia de este paradigma en la resolución de problemas de procesamiento \textit{on-line}. \par
+El diseño de un sistema para la identificación de comportamientos sospechosos en redes de información, mediante la utilización de técnicas de conteo eficientes y de métodos de \textit{streaming} para modelar de forma automática el comportamiento normal de la red, permite la construcción de una herramienta para identificar y alertar sobre comportamiento anómalo en una infraestructura de red de datos, mediante el análisis del tráfico de red. Esto complementa las funcionalidades de las herramientas basadas en detección de uso indebido dado que el modelado automático de comportamiento hace que no sea necesario utilizar un conjunto de reglas definidas por administradores. El modelo de comportamiento normal del tráfico de la red será calculado por el software, brindando la posibilidad de detectar efectivamente cualquier evento poco usual en los sistemas. Para esto, se hará uso de la información generada por los dispositivos de infraestructura de red como routers y los logs de servidores y subsistemas que interactuan dentro de la red. \par
+Además, al calcular automáticamente el modelo de comportamiento, es fácil de implementar y al utilizar información del tráfico de la red, su implementación requiere pocas modificaciones en los sistemas en producción. Se utilizará programación funcional para el desarrollo de los algoritmos, lo que aporta un complemento a la formación de grado y a la comunidad académica debido a la importancia de este paradigma en la resolución de problemas de procesamiento \textit{on-line}. \par
 Las pruebas del proyecto se harán en la Secretaría de Tecnologías para la Gestión de la Provincia de Santa Fe, lo cual la convierte en potencial beneficiaria de los resultados obtenidos del desarrollo de este proyecto.  \par
 
 \section*{Objetivos}
