--- a/anteproyecto.tex
+++ b/anteproyecto.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,10pt, oneside]{book}
+\documentclass[a4paper,12pt, oneside]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[spanish]{babel}
 \usepackage[style=ieee,backend=bibtex]{biblatex}
@@ -6,8 +6,7 @@
 \usepackage{draftwatermark}
 \usepackage{lineno}
 \usepackage[table]{xcolor}
-%\usepackage{showframe}
-\usepackage[a4paper]{geometry}
+\usepackage[top=1in, bottom=1.25in, left=1.25in, right=1.25in]{geometry}
 \usepackage{caption}
 \usepackage{pgfgantt}
 \usepackage{lscape} 
@@ -28,32 +27,24 @@
 \begin{titlepage}
 	\centering
 	\includegraphics[width=0.25\textwidth]{Universidad_del_Litoral}\par\vspace{1cm}
-	{\scshape\LARGE Universidad Nacional del Litoral \par}	
-	%\vspace{1cm}
+	{\scshape\LARGE Universidad Nacional del Litoral \par}
+	\vspace{1cm}
 	{\scshape\Large Proyecto Final de Carrera\par}
 	\vspace{1.5cm}
-	{\huge\bfseries Diseño de un sistema de detección de anomalías en redes de computadoras.\par}
-	\vspace{6cm}
-	realizado por \par
-	{\Large\itshape Leandro Pineda\par}
-	\vspace{1cm}
-	dirigido por Ing. Miguel Angel Robledo\par
-	codirigido por Ing. Gabriel Filippa
-	
-
+	{\huge\bfseries Diseño de un sistema de detección de anomalías en redes de computadoras\par}
+	\vspace{4cm}
+	{\huge\bfseries Anteproyecto\par}
 	\vfill
-	
-	%Repositorio git del documento (solo versión borrador): https://github.com/leandropineda/anteproyecto
-	
-	%\vfill
+		
+	{\Large \itshape Pineda Leandro\par}
 	
 	% Bottom of the page
-	\large Santa Fe\par
+	\large Santa Fe, Argentina\par
 	{Septiembre de 2016 \par}
 	
 \end{titlepage}
 
-\modulolinenumbers[5]
+%\modulolinenumbers[5]
 %\linenumbers
 
 \input{resumen}
